syntax = "proto3";

package logic.v1;

import "im/v1/message.proto";

option go_package = "api/logic/v1;v1";

service LogicService {
  // 接收原始消息，返回是否允许发送
  rpc ValidateAndProcessMessage(ChatInputRequest) returns (ChatInputResponse);
  
  // 系统主动推送（公告、通知）
  rpc SendSystemPush(SystemPushRequest) returns (SystemPushResponse);
}

message ChatInputRequest {
  im.v1.BaseMessage message = 1;   // 只会取targets[0]第一个用户
}

message ChatInputResponse {
  enum Code {
    OK = 0;
    NOT = 1;
  }
  Code code = 1;
  string message = 2;
}

enum PushType {
  PUSH_TYPE_UNSPECIFIED = 0;
  NOTICE = 1;  // 公告
  INFORM = 2;  // 通知
}

message SystemPushRequest {
  string content_id = 1;
  bytes content = 2;
  int64 timestamp = 3;
  PushType push_type = 4;
  string from_user_id = 5;
  repeated string to_user_ids = 6;   // max size: 1000
  string expire_time = 7;
}

message SystemPushResponse {
  enum Code {
    OK = 0;
    TOO_MANY_TARGET = 1;
    SERVER_ERROR = 2;
  }
  Code code = 1;
  string message = 2;
}